Fix: Horizontal Overflow AboutSection

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -4,10 +4,7 @@
   align-items: center;
 
   @media (max-width: 900px) {
-    height: 70vh;
-  }
-
-  @media (max-width: 500px) {
+    min-height: 70vh;
     height: auto;
     padding: 1rem 0;
   }
